# Lapis-monetae

./: .gitignore  Cargo.toml  README.md  ci-autopilot.ps1  start-wallet-gui.bat  wallet.py
.ci/: README-autopilot.md
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/src/: cli.rs  utils.rs
cli/src/modules/: account.rs  connect.rs  guide.txt  list.rs  monitor.rs  node.rs  pskb.rs  rpc.rs  send.rs
cli/src/wizards/: wallet.rs
consensus/core/src/: constants.rs  network.rs
consensus/pow/: Cargo.toml
consensus/pow/src/: lib.rs  wasm.rs
consensus/src/consensus/: test_consensus.rs
core/src/: kaspad_env.rs
docs/: crescendo-guide.md  testnet10-transition.md
kaspad/: Cargo.toml  README.md
kaspad/src/: args.rs  daemon.rs  main.rs
math/benches/: bench.rs
pagina web completa/: index.html  script.js  styles.css
tools/xmrig-lmt/: README.md
tools/xmrig-lmt/bridge/: Cargo.toml  README.md
tools/xmrig-lmt/bridge/src/: main.rs
utils/src/: as_slice.rs
wallet/: README.md
wallet-gui/: .wallet_gui_config.json  README.md  main.py
wallet-gui/tests/: test_cli_bridge.py  test_config.py  test_state.py  test_tx_history.py  test_validators.py
wallet-gui/wallet_app/: __init__.py  app.py  cli_bridge.py  config.py  contacts.py  history.py  state.py  tx_history.py  ui_components.py  validators.py
wallet-web/: README.md  index.html  script.js  start-wallet.bat  styles.css
wallet/wasm/: Cargo.toml
wasm/: Cargo.toml  README.md  build-docs  build-release
wasm/core/: Cargo.toml
wasm/npm/: README.md  package.json
wasm/src/: lib.rs  version.rs
(+85 files in other folders)
