[package]
name = "lmt-stratum-bridge"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures-util = "0.3.29"

kaspa-consensus-core = { path = "../../../consensus/core" }
kaspa-grpc-client = { path = "../../../rpc/grpc/client" }
kaspa-rpc-core = { path = "../../../rpc/core" }
kaspa-utils = { path = "../../../utils" }
kaspa-math = { path = "../../../math" }
